libs/pigment/compositeops/KoCompositeOpAlphaBase.h
@@ -30,6 +30,8 @@
 #define NATIVE_MAX_VALUE KoColorSpaceMathsTraits<channels_type>::max
 #define NATIVE_OPACITY_OPAQUE KoColorSpaceMathsTraits<channels_type>::unitValue
 #define NATIVE_OPACITY_TRANSPARENT KoColorSpaceMathsTraits<channels_type>::zeroValue
+#define NATIVE_ZERO_VALUE KoColorSpaceMathsTraits<channels_type>::zeroValue
+
 
 /**
  * A template base class for all composite op that compose color
@@ -95,17 +97,27 @@ public:
 
                     if (dstAlpha == NATIVE_OPACITY_OPAQUE) {
                         srcBlend = srcAlpha;
+                    } else if (dstAlpha == NATIVE_OPACITY_TRANSPARENT) {
+                        if (!allChannelFlags) {
+                            for (int i = 0; i < (int)_CSTraits::channels_nb; i++) {
+                                if (i != _CSTraits::alpha_pos) {
+                                    dstN[i] = NATIVE_ZERO_VALUE;
+                                }
+                            }
+                        }
+
+                        if (!alphaLocked && !_alphaLocked) {
+                            dstN[_CSTraits::alpha_pos] = srcAlpha;
+                        }
+                        srcBlend = NATIVE_OPACITY_OPAQUE;
+
                     } else {
                         channels_type newAlpha = dstAlpha + KoColorSpaceMaths<channels_type>::multiply(NATIVE_OPACITY_OPAQUE - dstAlpha, srcAlpha);
                         if (!alphaLocked && !_alphaLocked) { // No need to check for _CSTraits::alpha_pos == -1 since it is contained in alphaLocked
                             dstN[_CSTraits::alpha_pos] = newAlpha;
                         }
-
-                        if (newAlpha != 0) {
-                            srcBlend = KoColorSpaceMaths<channels_type>::divide(srcAlpha, newAlpha);
-                        } else {
-                            srcBlend = srcAlpha;
-                        }
+                        // newAlpha cannot be zero, because srcAlpha!=zero and dstAlpha!=unit here
+                        srcBlend = KoColorSpaceMaths<channels_type>::divide(srcAlpha, newAlpha);
                     }
                     _compositeOp::composeColorChannels(srcBlend, srcN, dstN, allChannelFlags, channelFlags);
 
